# ai-bridge

./: .env.example  .gitignore  README.md  SKILL.md  find_selector.py  inspect_xgrok.py  pyproject.toml  stop_proxy.py  submit_and_inspect.py
proxy/: browser.py  config.py  ensure.py  inspector.py  lifecycle.py  main.py  models.py  scraper.py  send.py  site_config.py  site_session.py  streaming.py  translator.py  tray.py
proxy/adapters/: __init__.py  openrouter.py
proxy/sites/: _template.yaml  chatgpt.yaml  openrouter.yaml  perplexity.yaml  use-ai.yaml  x-ai.yaml  x-grok.yaml
references/: architecture.md  openrouter.md
tests/: diagnose_selectors.py  get_dom.py  test_sites.py
